# freakto

./: .editorconfig  .env.example  .gitattributes  .gitignore  AIRDROP_RADAR_OUTPUTS.md  AI_AND_FUTURES_INTEGRATION_README.md  AUTO_EVENT_COLLECTOR_RUNBOOK.md  BACKTEST_DIAGNOSTICS_RUNBOOK.md  BACKTEST_GATE_SIMULATOR_RUNBOOK.md  CALIBRATION_EDGE_GATE_README.md  CALIBRATION_VALIDATION_REAL_RESULT.md  CALIBRATION_VALIDATION_RUNBOOK.md  CAUSAL_INTELLIGENCE_RUNBOOK.md  CHAMPION_CHALLENGER_RUNBOOK.md  CHANGED_FILES.txt  CHANGED_FILES_CLOUD_FIX.txt  CHANGED_FILES_CLOUD_RUNNER.txt  CHANGED_FILES_CLOUD_STATE_PRODUCTION_FIX.txt  CHANGED_FILES_PAPER_DASHBOARD_TEST_FIX.txt  CHANGED_FILES_SCHEDULE_PERFORMANCE.txt  CHANGED_FILES_WINDOWS_LOCK_FIX.txt  CLEANUP_NOTES.md  CLOUD_RUNNER_TEST_AND_ORCHESTRATOR_FIX.md  CLOUD_STATE_PRODUCTION_PERSISTENCE_FIX.md  COST_GATE_DIAGNOSTICS_IMPLEMENTATION_RESULT.md  COST_GATE_DIAGNOSTICS_RUNBOOK.md  ENGINE_V2_NOTES.md  EVENT_OPPORTUNITY_UNIVERSE_IMPLEMENTATION_RESULT.md  EVENT_OPPORTUNITY_UNIVERSE_RUNBOOK.md  EVENT_SCHEMA_COMPATIBILITY_FIX.md  EVIDENCE_GRAPH_RUNBOOK.md  EXECUTION_COST_GEOMETRY_RUNBOOK.md  FEATURE_ARCHITECTURE_V2_RUNBOOK.md  FORWARD_REGIME_LABELING_RUNBOOK.md  FORWARD_SHADOW_COVERAGE_RUNBOOK.md  FORWARD_TEST_RUNBOOK.md  FRESH_OOS_FEATURE_STORE_REAL_RESULT.md  FRESH_OOS_FEATURE_STORE_RUNBOOK.md  GITHUB_ACTIONS_SETUP_FA.md  GITHUB_CLOUD_RUNNER_RUNBOOK.md  (+198 more)
airdrop/: dedup.py  formatter.py  http_client.py  models.py  radar.py
config/: learning_overrides.json  paper_go_live_policy.json
data/: README.md  airdrop_watchlist.json  auto_event_sources.example.json  auto_events.csv  fresh_oos_cost_profiles.example.json  manual_events.example.csv  market_replay_context_template.csv
docs/: AIRDROP_RADAR_README.md  OPERATIONS.md  README.md
engine/: RELEASE_NOTES_v3_0_0.md  __init__.py  adaptive.py  auto_event_collector.py  backtest_diagnostics.py  backtest_gate_simulator.py  baseline_benchmarks.py  calibration_dataset_builder.py  calibration_mapper.py  causal_intelligence.py  common.py  component_ablation.py  confidence.py  confidence_calibration.py  confidence_calibration.py.patch_note.txt  cost_aware_label_v2.py  csv_utils.py  daily_report.py  decision.py  edge_gate.py  event_opportunity_benchmarks.py  event_opportunity_universe.py  evidence_graph.py  evidence_quality.py  (+57 more)
(+10225 files in other folders)
